fix: #3017 #3064 #3093 pricing and dev portal fixes (#3101)
* fix: #3017 #3064 #3093 pricing and dev portal fixes

* fix: re-adds scrollbars

--- a/packages/elements/src/styles/base/global.scss
+++ b/packages/elements/src/styles/base/global.scss
@@ -4,10 +4,6 @@
 
 * {
   box-sizing: border-box !important;
-  scrollbar-width: none;
-  &::-webkit-scrollbar {
-    display: none;
-  }
 }
 
 html {
